--- a/latex/introduction/introduction.tex
+++ b/latex/introduction/introduction.tex
@@ -1,8 +1,16 @@
 \chapter{Introduction}
 
+In the following sections, we introduce the key concepts relevant to our research. Since topics such as containerization and container orchestration — and operations in general — are often underrepresented in the academic curriculum, we find it essential to provide the reader with foundational context.
+
+Chapter~\ref{chap:research} forms the core of the theoretical part of our research. It describes the methods employed, the experimental environment we created, and the rationale behind the selection of the tools used.
+
+Chapter~\ref{chap:implementation} focuses on the implementation of the security tool developed as a result of our research. This chapter takes a practical perspective and highlights the most significant engineering aspects of our solution.
+
+Finally, Chapter~\ref{chap:results} summarizes our findings, concludes the research, and reflects on the outcomes achieved through the development of our custom security tool.
+
 \input{introduction/containerization}
 \input{introduction/kubernetes}
-%\input{introduction/security_automation}
+\input{introduction/security_frameworks}
 
 
 
