--- a/latex/terminology.tex
+++ b/latex/terminology.tex
@@ -6,33 +6,64 @@
     \setlength\itemsep{1px}
     \item \textbf{CI/CD pipeline} \\
     CI/CD pipeline is a set of automatic tasks to be executed upon specific action resulting in ether failure on some of the pipeline stages or successful application deployment on the target environment. The aforementioned action might be a push into the source code repository or a manual pipeline run request. CI/CD pipeline usually includes build, test and deploy stages.
-    \setlength\itemsep{1px}
     \item \textbf{Cloud} \\
-    Term "Cloud" is ususally used to describe an array of (remote, on-premise or hybrid) servers that operate as a single ecosystem used for various hosting services.
+    Term ``cloud'' is ususally used to describe an array of (remote, on-premise or hybrid) servers that operate as a single ecosystem used for various hosting services.
     \item \textbf{Cloud provider} \\
     A cloud provider is a company that offers cloud computing services, which include resources like storage, processing power, networking, databases, and software, delivered over the internet.
+    \item \textbf{Vulnerability} \\
+    When we say ``vulnerability'' in this paper, we mostly refer to the exploitable weakness inside the container. Depending on the context, it can also mean security threat, in general sense.
+    \item \textbf{Misconfiguration} \\
+    ``Misconfiguration'' refers explicitly to the incorrectly configured (or unconfigured) Kubernetes resource or component. ``Misconfiguration'' can be ontained by the Kubernetes operator configuring something wrong, not configuring something or configuring something incompletely.
 \end{itemize}
 
 \section*{Abbreviations}
 
 \begin{itemize}
     \setlength\itemsep{1px}
-    \item \textbf{K8s} - Kubernetes.
-    \item \textbf{OS} - Operating System.
-    \item \textbf{VM} - Virtual Machine.
-    \item \textbf{GUI} - Graphical User Interface.
-    \item \textbf{CLI} - Command-line Interface.
-    \item \textbf{CI/CD} - Continuous Integration/Continuous Deployment.
-    \item \textbf{RBAC} - Role Based Access Control.
-    \item \textbf{AWS} - Amazon Web Services.
-    \item \textbf{TLS} - Transport Layer Security.
-    \item \textbf{CSRF} - Cross Site Request Forgery.
-    \item \textbf{XSS} - Cross Site Scripting.
-    \item \textbf{OWASP} - The Open Worldwide Application Security Project.
-    \item \textbf{TCP} - Transmission Control Protocol.
-    \item \textbf{API} - Application Programming Interface.
-    \item \textbf{NFS} - Network File System.
-    \item \textbf{iSCSI} - Internet Small Computer Systems Interface.
+    \item \textbf{K8s} -- Kubernetes.
+    \item \textbf{OS} -- Operating System.
+    \item \textbf{VM} -- Virtual Machine.
+    \item \textbf{GUI} -- Graphical User Interface.
+    \item \textbf{CLI} -- Command-line Interface.
+    \item \textbf{CI/CD} -- Continuous Integration/Continuous Deployment.
+    \item \textbf{RBAC} -- Role Based Access Control.
+    \item \textbf{AWS} -- Amazon Web Services.
+    \item \textbf{TLS} -- Transport Layer Security.
+    \item \textbf{CSRF} -- Cross Site Request Forgery.
+    \item \textbf{XSS} -- Cross Site Scripting.
+    \item \textbf{OWASP} -- The Open Worldwide Application Security Project.
+    \item \textbf{TCP} -- Transmission Control Protocol.
+    \item \textbf{API} -- Application Programming Interface.
+    \item \textbf{NFS} -- Network File System.
+    \item \textbf{iSCSI} -- Internet Small Computer Systems Interface.
+    \item \textbf{SBOM} -- Software Bill of Materials
+    \item \textbf{CVE} -- Common Vulnerabilities and Exposures
+    \item \textbf{IaC} -- Infrastructure as Code
+    \item \textbf{CIS} -- Center of Internet Security
+    \item \textbf{CNCF} -- Cloud Native Computing Foundation
+    \item \textbf{NSA} -- National Security Agency
+    \item \textbf{CISA} -- Cybersecurity and Infrastructure Security Agency
+    \item \textbf{IaC} -- Infrastructure as Code
+    \item \textbf{SBOM} -- Software Bill of Materials
+    \item \textbf{GCP} -- Google Cloud Platform
+    \item \textbf{NIST} -- National Institute of Standards and Technology
+    \item \textbf{SOC} -- Service Organization Control 
+    \item \textbf{PCI-DSS} -- Payment Card Industry Data Security Standard
+    \item \textbf{GDPR} -- General Data Protection Regulation
+    \item \textbf{HIPAA} -- Health Insurance Portability and Accountability Act
+    \item \textbf{EU} -- European Union
+    \item \textbf{ePHI} -- Electronic Protected Health Information
+    \item \textbf{AICPS} -- American Institute of Certified Public Accountants
+    \item \textbf{ECR} -- Elastic Container Registry
+    \item \textbf{PVC} -- PersistentVolumeClaim
+    \item \textbf{HTTP} -- Hypertext Transfer Protocol
+    \item \textbf{AI} -- Artificial Intelligence
+    \item \textbf{PDF} -- Portable Document Format
+    \item \textbf{CSV} -- Comma-separated Values
+    \item \textbf{CPU} -- Central Processing Unit
+    \item \textbf{TLS} -- Transport Layer Security
+    \item \textbf{LSA} -- Kubernetes Security Assessment
+    \item \textbf{IBM} -- International Business Machines
 \end{itemize}
 
 
