--- a/latex/introduction/containerization.tex
+++ b/latex/introduction/containerization.tex
@@ -1,10 +1,10 @@
 \section{Containerization}
 
-When talking about the Kubernetes it is essential to be familiar with the technology of containerization. This chapter introduces the reader to the basics of the containerization. We start by giving a short definition, then we examine core concepts of the containerization such as container image and Docker. Then we compare it to the traditional means of application deployment. Finally, we examine the security on the container image level.
+When talking about the Kubernetes it is essential to be familiar with the technology of containerization. This section introduces the reader to the basics of the containerization. We start by giving a short definition, then we examine core concepts of the containerization such as container image and Docker. Then, we compare it to the traditional means of application deployment. Lastly, we examine the security on the container image level.
 
 \subsection{Overview}
 
-According to IBM, containerization is the packaging of software code with just the operating system libraries and dependencies required to run the code to create a single lightweight executable -- called a container -- that runs consistently on any infrastructure. \cite{ibm-containerization}.
+According to IBM, containerization is ``the packaging of software code with just the operating system libraries and dependencies required to run the code to create a single lightweight executable -- called a container -- that runs consistently on any infrastructure'' \cite{ibm-containerization}.
 
 Although containers are built to be infrastructure-agnostic, there are still certain compatibility considerations to keep in mind. One significant factor is processor architecture. Containers built for a specific architecture family (e.g., arm64, amd64, or x86) are generally not cross-compatible with infrastructures based on different architectures. However, it is possible to build multi-architecture containers that support multiple processor architectures in a single image, enhancing the flexibility and portability of the containerized applications across diverse environments.
 
@@ -12,15 +12,15 @@ Although containers are built to be infrastructure-agnostic, there are still cer
 
 Container images are software application packages, which are shipped with all required libraries, binaries and configurations. In another words, container images are lightweight and higly portable artifacts. Usually container images are stored in Container Registries, either public (e.g. Dockerhub) or private. When an image transitions into the running state, it becomes a container.
 
-Container images are comprised of multiple layers. At the base layer there is usually some lightweight Linux distribution. Then, each layer introduce a change in the environment, a change might be in the code or binary, runtimes, dependencies, and other filesystem objects required to run an application.
+Container images are comprised of multiple layers. At the base layer there is usually some lightweight Linux distribution. Then, each layer introduces a change in the environment, this change might concern the code or binary, runtimes, dependencies, and other objects required to run an application. Resulting image is, thus, a combination of those layers.
 
 \subsection{Docker}
     
-Docker is the most widely used containerization tool. It ships tools to build, run and store containers. Docker Engine is a collective name for the Docker build toolkit. First, there is a \lstinline{dockerd} or Docker Daemon, which is a server running in the backend. Secondly, the user intercts with Docker CLI or Docker Client to build and run images. Docker Clients communicates with Docker Daemon through the Rest API served at the backend. Then, there is Docker Compose, which a simple orchestration tool for the containers. It can be used to compose a few containers into a system with a shared network and storage. Lastly, Dockerhub is a public container registry, where the bulk of the publicly available images are stored.
+Docker is the most widely used containerization tool. It provides the tools to build, run and store containers. Docker Engine is a collective name for the Docker build toolkit. First, there is a \lstinline{dockerd} or Docker Daemon, which is a server running in the backend. Secondly, the user intercts with Docker CLI or Docker Client to build and run images. Docker Clients communicates with Docker Daemon through the Rest API served at the backend. Then, there is Docker Compose, which a simple orchestration tool for the containers. It can be used to compose a few containers into a system with a shared network and storage. Lastly, Dockerhub is a public container registry, where the bulk of the publicly available images are stored.
 
 Images are built based on the Dockerfile, which is a set of instructions. Each instruction introduces a new layer to the image. Layers can then be smartly reused by the Docker Engine to build different images with similar bases. Listing~\ref{lst:dockerfile} demonstates an example of the Dockerfile. Each Dockerfile starts with a \lstinline{FROM} command, which specifies the base image to use for this container. The \lstinline{FROM} keyword is followed by the base image name. In our case, \lstinline{registry.redhat.io} is the registry address. It is followed by the repository name (\lstinline{ubi8} in our case), which is separated from the registry name by a single slash and may be preceeded by the namespace. Lastly, tag follows repository name and separated with a colon from it. Both registry address and tag are optional. In case registry name is omitted, Docker will search for the image in the Dockerhub. If the tag is not provided, Docker will fetch \lstinline{latest} tag.
 
-\begin{lstlisting}[language=Dockerfile, caption={A simple Dockerfile for a NodeJS app.}, label={lst:dockerfile}]
+\begin{lstlisting}[language=Dockerfile, caption={[A simple Dockerfile for a NodeJS app] A simple Dockerfile for a NodeJS app.}, label={lst:dockerfile}]
     FROM registry.redhat.io/ubi8:latest
     RUN dnf install nodejs && \
         useradd -u 1000 -g 1000 -M node
@@ -38,7 +38,7 @@ Images are built based on the Dockerfile, which is a set of instructions. Each i
 
 Let us discuss why containerization is the internationally accepted enterprise solution nowadays and why do software arhitects tend to choose it over traditional virtualization solutions.
 
-Figure~\ref{img:containers-vs-virtual-machines} provides a side-by-side comparison of a Virutal Machine and a Cloud infrastructure, each with three applications deployed. We can see that each application on the container side is missing a "Guest OS" layer. Here lies the main advantage of the containers. Absence of the Guest Operating System provides a lot of advantages, which we discuss further below.
+Figure~\ref{img:containers-vs-virtual-machines} provides a side-by-side comparison of a Virutal Machine and a cloud infrastructure, each with three applications deployed. We can see that each application on the container side is missing a ``Guest OS'' layer. Here lies the main advantage of the containers. Absence of the Guest Operating System provides a lot of advantages, which we discuss further below.
 
 \begin{figure}[!hbt]
 	\begin{center}
@@ -60,7 +60,7 @@ These are some of the most significant advantages of containerization. All of th
 
 \subsection{Security Concepts}
 
-There are few security concepts native to the containerization. Security of a container starts with the secuirity of an image. When considering image metadata, image immutability is the core concept. Once a container image is built and tagged, it should not be altered. Any changes should result in a new version or tag. For further security image digests can be used. An image digest is a SHA256 hash that uniquely represents an image's content. So, for instance, a more secure way to write \lstinline{FROM ubuntu:latest} would be \lstinline{FROM ubuntu@sha256:abcd1234efgh5678}. Additionally, images can be signed using signing tools. Docker Content Trust (DCT) is one of the implementations and can be used to ensure images are signed and verified.
+There are few security concepts native to the containerization. Security of a container starts with the secuirity of an image. When considering image metadata, image immutability is the core concept. Once a container image is built and tagged, it should not be altered. Any changes should result in a new version or tag. For further security image digests can be used. An image digest is a SHA256 hash that uniquely represents an image's content. So, for instance, a more secure way to write \lstinline{FROM ubuntu:latest} would be \lstinline{FROM ubuntu@sha256:abcd1234efgh5678}. Additionally, images can be signed using signing tools. Docker Content Trust is one of the implementations and can be used to ensure images are signed and verified.
 
 Image can only be as secure as the binaries and libraries within it. It is recommended to regularly update binaries inside the image to their latest stable versions. Libraries are also a subject to regular secuirty updates. There are a lot of image scanners available that can effectively detect outdated packages and libraries inside the image. Most cloud providers nowadays incorporate such tools into their image registry services, so that all pushed images are automatically scanned for vulnerabilities.
 
