--- a/latex/introduction/kubernetes.tex
+++ b/latex/introduction/kubernetes.tex
@@ -1,6 +1,6 @@
 \section{Kubernetes}
 
-In this section we will dive into the topic of Kubernetes. We start by shortly overviewing the Kubernetes architecure. Then we expand on the Kubernetes resources, their kinds and their role in the target application environment. Finally, we consider the security of Kubernetes.
+In this section we will dive into the topic of Kubernetes. We start by shortly overviewing the Kubernetes architecure. Then we expand on the Kubernetes resources, their kinds and their role in the target application environment. Finally, we consider some of the security aspects of the Kubernetes and its varieties.
 
 \subsection{Overview}
 
@@ -12,7 +12,7 @@ It is important to emphasize that the Kubernetes abstracts the actual machines (
 
 \subsection{Kubernetes Architecture}
 
-While Kubernetes requires at least three nodes to run, there are some implementation designed for the local use, which emulate this concept (see Subsection~\ref{sec:other-kubernetes-implementations}). The master node is called control plane. The control plane manages the worker nodes and the Pods in the cluster. In production environments, the control plane usually runs across multiple computers and a cluster usually runs multiple nodes, providing fault-tolerance and high availability. Worker nodes host the actual workload inside the cluster. Figure~\ref{img:kubernetes-architecture} provides a simple high-level overview of a typical Kubernetes cluster with a Control Plane and three worker nodes.
+While Kubernetes requires at least three nodes to run, there are some implementation designed for the local use, which emulate this concept (see Subsection~\ref{sec:other-kubernetes-implementations}). The master node is called control plane. The control plane manages the worker nodes and the Pods in the cluster. In production environments, the control plane usually runs across multiple computers and the cluster runs multiple nodes, providing fault-tolerance and high availability. Worker nodes host the actual workload inside the cluster. Figure~\ref{img:kubernetes-architecture} provides a simple high-level overview of a typical Kubernetes cluster with a Control Plane and three worker nodes.
 
 \begin{figure}[!hbt]
 	\begin{center}
@@ -81,7 +81,7 @@ Job and CronJob define tasks that run to completion and then stop. Jobs represen
 Kubernetes networking model makes Pods look like VMs in the networking aspect. Pods on any nodes can communicate with each other without NAT. Containers inside the same Pod share its network meaning that they can reach each other using localhost.
 
 Kubernetes networking addresses four concerns:
-\begin{itemize}
+\begin{itemize}[noitemsep]
 \item Containers within a Pod use networking to communicate via loopback.
 \item Cluster networking provides communication between different Pods.
 \item The Service API lets you expose an application running in Pods to be reachable from outside your cluster.
@@ -101,116 +101,7 @@ PersistentVolumes and PersistentVolumeClaims are the resources kinds most import
 \item A PersistentVolumeClaim (PVC) is a request for storage by a user. It is similar to a Pod. Pods consume node resources and PVCs consume PV resources. Pods can request specific levels of resources (CPU and Memory). Claims can request specific size and access modes (e.g., they can be mounted ReadWriteOnce, ReadOnlyMany or ReadWriteMany). Once and Many here refer to a number of Pods that can perform the read or write simultaneously.
 \end{itemize}
 
-\subsection{Infrastructure Security}
-
-When we are talking about the infrastructure security, we must consider multiple layers. Going from the top to the bottom, we start with the security measurements taken on the Cloud provider side. In most cases this is not something we can affect and the security of different Cloud providers varies significantly. Unfortunately, this is out of scope of this paper, but all of the "big five" Cloud providers (AWS, Azure, Google Cloud, Alibaba and IBM) maintain high security standarts and security risks generally should not be a concern for their end users. Then, we get to the cluster itself. On the cluster level we must consider the security of the nodes, security of the cluster components and their configuration. At this layer we have already some space for the misconfigurations to appear. Here we can evaluate the security of the single components using some of the security scanners presented in \nameref{sec:kubernetes-security-automation}. But it should be noted that the cluster can only be as secured as its nodes. Therefore, attention should be given to the node security first. Host operating system should be regularly patched with the most recent security patches. Lastly, we get to the application level, where the security of the application code, Kubernetes resoucre configuration, libraries, dependencies and base images is the main concern. Again, this is the layer, where the developers have the most access to, thus, providing a lot of space for the possibility of a human error. In this paper we mostly work on this level when we do our research.
-
-Officially, The Linux Foundation provides only some security guidelines for each of the layers. However, bundled with Kubernetes we get a few means to keep the security under control. Below we present an overview of the Kubernetes security recommendations, RBAC and Data security inside Kubernetes.
-
-\subsubsection*{Kubernetes security recommendations}
-
-This section gathers the official security recommendations provided by the Kubernetes. They provide a list of concerns for each level of the cloud infrastructure. Cloud infrastructure can be viewed as a composition of four layers as displayed by the Fig~\ref{img:cloud-security}.
-
-\begin{figure}[!hbt]
-	\begin{center}
-		\includegraphics[width=0.75\textwidth]{images/cloud-security.png}
-        \caption{Four layers of the cloud infrastructure.}
-		\label{img:cloud-security}
-	\end{center}
-\end{figure}
-
-Each layer is built upon the previous one and its security depends on the security of the outer layers. It is, therefore, important to maintain high security standarts on base levels (Cloud, Cluster, Container).
-
-\begin{enumerate}
-
-\item \textbf{Cloud} \\
-Each cloud provider has its own security policies and guidelines. There are, however, some general infrastructure-level security best advice described by in the Tab~\ref{tab:cloud-security-recommendations}.
-
-\begin{table}[H]
-    \begin{center}
-        \begin{tabular}{ | p{.20\textwidth} | p{.80\textwidth} | } 
-         \hline
-         \textbf{Area of Concern for Kubernetes Infrastructure} & \textbf{Recommendation} \\ 
-         \hline
-         Network access to API Server (Control plane) & All access to the Kubernetes control plane is not allowed publicly on the internet and is controlled by network access control lists restricted to the set of IP addresses needed to administer the cluster. \\ 
-         \hline
-         Network access to Nodes (nodes)  & Nodes should be configured to only accept connections (via network access control lists) from the control plane on the specified ports, and accept connections for services in Kubernetes of type NodePort and LoadBalancer. If possible, these nodes should not be exposed on the public internet entirely. \\ 
-         \hline
-         Kubernetes access to Cloud Provider API & Each cloud provider needs to grant a different set of permissions to the Kubernetes control plane and nodes. It is best to provide the cluster with cloud provider access that follows the principle of least privilege for the resources it needs to administer. \\
-         \hline
-         Access to etcd & Access to etcd (the datastore of Kubernetes) should be limited to the control plane only. Depending on your configuration, you should attempt to use etcd over TLS. \\
-         \hline
-         etcd Encryption & Wherever possible it's a good practice to encrypt all storage at rest, and since etcd holds the state of the entire cluster (including Secrets) its disk should especially be encrypted at rest. \\
-         \hline
-        \end{tabular}
-    \end{center}
-    \caption{Security recommendations for the Cloud layer.}
-    \label{tab:cloud-security-recommendations}
-\end{table}
-
-\item \textbf{Cluster} \\
-There are two cluster security concerns that could be addressed: securing the configurable cluster components and securing the applications running in the cluster.
-
-There are a few things to consider regarding the application security:
-\begin{itemize}
-\item RBAC Authorization (Access to the Kubernetes API)
-\item Authentication	
-\item Application secrets management (and encrypting them in etcd at rest)
-\item Ensuring that pods meet defined Pod Security Standards
-\item Quality of Service (and Cluster resource management)
-\item Network Policies
-\item TLS for Kubernetes Ingress
-\end{itemize}
-
-\item \textbf{Container} \\
-Securing containers is a vast topic, which deserves its own chapter. There are, nevertheless, a few general recommendation provided by the Kubernetes, which you can find in the Tab~\ref{tab:container-security-recommendations}.
-
-\begin{table}[H]
-    \begin{center}
-        \begin{tabular}{ | p{.20\textwidth} | p{.80\textwidth} | } 
-        \hline
-        \textbf{Area of Concern for Containers} & \textbf{Recommendation} \\ 
-        \hline
-        Container Vulnerability Scanning and OS Dependency Security & As part of an image build step, you should scan your containers for known vulnerabilities. \\ 
-        \hline
-        Image Signing and Enforcement & Sign container images to maintain a system of trust for the content of your containers. \\ 
-        \hline
-        Disallow privileged users & When constructing containers, create users inside of the containers that have the least level of operating system privilege necessary in order to carry out the goal of the container. \\
-        \hline
-        \end{tabular}
-    \end{center}
-    \caption{Security recommendations for the Container layer.}
-    \label{tab:container-security-recommendations}
-\end{table}
-
-\item \textbf{Code} \\
-When it comes to code, the developers have the most flexibility to design secure applications. There are a lot of issues to address, which may vary significantly from application to application depending on its purpose, architecture and framework base. Kubernetes documentation gives a handful of recommendations regarding this topic, which are displayed below in the Tab~\ref{tab:code-security-recommendations}.
-
-\begin{table}[H]
-    \begin{center}
-        \begin{tabular}{ | p{.20\textwidth} | p{.80\textwidth} | } 
-        \hline
-        \textbf{Area of Concern for Code} & \textbf{Recommendation} \\ 
-        \hline
-        Access over TLS only & If your code needs to communicate by TCP, perform a TLS handshake with the client ahead of time. With the exception of a few cases, encrypt everything in transit. Going one step further, it's a good idea to encrypt network traffic between services. This can be done through a process known as mutual TLS authentication or mTLS which performs a two sided verification of communication between two certificate holding services. \\ 
-        \hline
-        Limiting port ranges of communication & This recommendation may be a bit self-explanatory, but wherever possible you should only expose the ports on your service that are absolutely essential for communication or metric gathering. \\ 
-        \hline
-        3rd Party Dependency Security & It is a good practice to regularly scan your application's third party libraries for known security vulnerabilities. Each programming language has a tool for performing this check automatically. \\
-        \hline
-        Static Code Analysis & Most languages provide a way for a snippet of code to be analyzed for any potentially unsafe coding practices. Whenever possible you should perform checks using automated tooling that can scan codebases for common security errors. \\
-        \hline
-        Dynamic probing attacks & There are a few automated tools that you can run against your service to try some of the well known service attacks. These include SQL injection, CSRF, and XSS. One of the most popular dynamic analysis tools is the OWASP Zed Attack proxy tool. \\
-        \hline
-        \end{tabular}
-    \end{center}
-    \caption{Security recommendations for the Code layer.}
-    \label{tab:code-security-recommendations}
-\end{table}
-                      
-\end{enumerate}
-
-\subsubsection*{Role Based Access Control}
+\subsection{Role Based Access Control}
 
 Role-Based Access Control, \textbf{RBAC} in short, is a fundamental security mechanism in Kubernetes that governs access to resources within a cluster. It enables administrators to define policies that restrict or allow actions based on the roles assigned to users, groups, or service accounts. Proper configuration of RBAC is critical to ensuring a secure Kubernetes environment.
 
@@ -229,16 +120,16 @@ There are a few components of RBAC that allow us to create users and define thei
 
 RBAC policies are defined using YAML manifests. The primary fields in an RBAC policy include:
 
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item \textbf{APIGroups}: Specifies the API group of the resources.
     \item \textbf{Resources}: Indicates the type of resources, such as Pods, Services, or Deployments.
     \item \textbf{Verbs}: Lists the actions allowed, such as get, list, create, or delete.
 \end{itemize}
 
-The symbol '*' is a wildcard that might be used to represent "all" for specific fields. However, its use should generally be avoided in compliance with least privilege principle.
+The symbol `*' is a wildcard that might be used to represent ``all'' for specific fields. However, its use should generally be avoided in compliance with least privilege principle.
 Listing~\ref{lst:k8s-role} defines a \lstinline{pod-reader} \textbf{Role} inside the \lstinline{my-namespace} namespace.
 
-\begin{lstlisting}[language=YAML, caption={An example of a Kubernetes Role definition.}, label={lst:k8s-role}]
+\begin{lstlisting}[language=YAML, caption={[An example of a Kubernetes Role definition] An example of a Kubernetes Role definition.}, label={lst:k8s-role}]
     apiVersion: rbac.authorization.k8s.io/v1
     kind: Role
     metadata:
@@ -250,7 +141,7 @@ Listing~\ref{lst:k8s-role} defines a \lstinline{pod-reader} \textbf{Role} inside
       verbs: ["get", "list", "watch"]
 \end{lstlisting}
 
-\subsubsection*{Data Security}
+\subsection{Data Security}
 
 Kubernetes provides only one kind of resource to manage sensitive data. A Kubernetes Secret is designed to store sensitive data in a way that prevents it from being exposed unnecessarily. API tokens, database credentials or encryption keys can be stored as Secrets. By default, Secrets are stored unencrypted in etcd. Enabling encryption at rest is crucial to secure their contents. For a more secure solution external tools such as HashiCorp Vault, AWS Secrets Manager, or Azure Key Vault should be considered as an alternative to the Kubernetes Secrets to securely manage and rotate sensitive information.
 
@@ -263,7 +154,7 @@ On the topic of the filesystem security of the pods, Kubernetes itself does not 
 
 Openshift is another container orchestration platform built on top of Kubernetes by Red Hat. Openshift extends the basic Kubernetes functionality and emphasizes on security and automation. It ships with a lot of additional enterprise-level features like image registry, pipeline operators and OpenShift Web Console.
 
-OpenShift emphasizes security with stricter security defaults, such as non-root containers by default and integrated role-based access control. It also provides Security Context Constraints for fine-grained control over workloads. They control the actions that a pod can perform and what it has the ability to access. Imagine we have a ServiceAccount \lstinline{mysvcacct} inside \lstinline{default} namespace (or project, as they called in Openshift). Then if we would like to grant a pod inside the \lstinline{default} namespace running under \lstinline{mysvcacct} ServiceAccount, we could do so using this command: \lstinline{oc adm policy add-scc-to-user privileged system:serviceaccount:myproject:mysvcacct}.
+OpenShift emphasizes security with stricter security defaults, such as non-root containers by default and integrated role-based access control. It also provides Security Context Constraints for fine-grained control over workloads. They control the actions that a pod can perform and what it has the ability to access. Imagine we have a ServiceAccount \lstinline{mysvcacct} inside \lstinline{default} namespace (or project, as they called in Openshift). Then if we would like to grant a pod inside the \lstinline{default} namespace running under \lstinline{mysvcacct} ServiceAccount, we could do so using this command: \lstinline[breaklines=true]|oc adm policy add-scc-to-user privileged system:serviceaccount:myproject:mysvcacct|.
 
 The OpenShift dashboard, part of the OpenShift Web Console, provides a graphical user interface for managing and monitoring Kubernetes resources within an OpenShift cluster. It simplifies cluster management and enables users to perform tasks without extensive use of the command line. Overview page of the dashboard can be seen on Fig~\ref{img:openshift-dashboard}.
 
@@ -277,13 +168,13 @@ The OpenShift dashboard, part of the OpenShift Web Console, provides a graphical
 
 \subsubsection*{Rancher Desktop}
 
-Rancher Desktop is "an open-source application that provides all the essentials to work with containers and Kubernetes on the desktop". \cite{rancher-desktop}
+Rancher Desktop is ``an open-source application that provides all the essentials to work with containers and Kubernetes on the desktop''. \cite{rancher-desktop}
 
-Basically, it provides a local Kubernetes cluster with convenient GUI and a dashboard by default. It is widely used by developers to test their application in Cloud environments without commiting the changes. 
+Basically, it provides a local Kubernetes cluster with convenient GUI and a dashboard by default. It is widely used by developers to test their application in cloud environments without commiting the changes. 
 
 Big advantage of Rancher Desktop is its simple installation process. Rancher Desktop is available for Windows, Linux and MacOS and is also bundled with all the necessary CLI tools like docker, nerdctl, kubectl, helm, and others.
 
-Rancher Desktop allows to choose from dockerd or containerd as a container backend. Additionally, users can switch between Kubernetes versions easily to ensure compatibility with various environments. GUI allows to inspect containers and images, troubleshoot the cluster and forward container ports to the local machine. Figure~\ref{img:rancher-desktop} captures a "Port Forwarding" page of Rancher Desktop app.
+Rancher Desktop allows to choose from dockerd or containerd as a container backend. Additionally, users can switch between Kubernetes versions easily to ensure compatibility with various environments. GUI allows to inspect containers and images, troubleshoot the cluster and forward container ports to the local machine. Figure~\ref{img:rancher-desktop} captures a ``Port Forwarding'' page of Rancher Desktop app.
 
 Being free and easy to setup, Rancher Desktop became our main tool for local experiments. Most of our research was done on a Rancher local cluster. 
 
