--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,41 +1,3 @@
-% Kubernetes official webpage
-@article{kubernetes,
-  title = {Kubernetes official webpage},
-  author = {The Linux Foundation},
-  note = {\url{https://kubernetes.io/}, Accessed: 4.11.2024}
-}
-
-% IBM page on Kubernetes
-@article{ibm-kubernetes,
-  title = {What is Kubernetes?},
-  author = {Stephanie Susnjara and Ian Smalley},
-  note = {\url{https://www.ibm.com/topics/kubernetes}, Accessed: 4.11.2024}
-}
-
-% IBM page on containerization
-@article{ibm-containerization,
-  title = {What is containerization?},
-  author = {Stephanie Susnjara and Ian Smalley},
-  note = {\url{https://www.ibm.com/topics/containerization}, Accessed: 4.11.2024}
-}
-
-% Rancher Desktop web page
-@article{rancher-desktop,
-  title = {Rancher Desktop by SUSE},
-  author = {SUSE Rancher Engineering group},
-  note = {\url{https://rancherdesktop.io/}, Accessed: 2.12.2024}
-}
-
-% Kubernetes in action book
-@book{kubernetes-in-action,
-  author    = {Marko Lukša},
-  title     = {Kubernetes in Action},
-  year      = {2018},
-  publisher = {Manning Publications Co.},
-  address   = {20 Baldwin Road, PO Box 761, Shelter Island, NY 11964},
-  isbn      = {9781617293726},
-}
-
 % V. B. Mahajan and S. B. Mane, "Detection, Analysis and Countermeasures
 % for Container based Misconfiguration using Docker and Kubernetes",
 % 2022 International Conference on Computing, Communication, Security
@@ -100,6 +62,44 @@
   booktitle = {17th International Conference on Availability, Reliability and Security (ARES '22)}
 }
 
+% Kubernetes official webpage
+@article{kubernetes,
+  title = {Kubernetes official webpage},
+  author = {The Linux Foundation},
+  note = {\url{https://kubernetes.io/}, Accessed: 4.11.2024}
+}
+
+% IBM page on Kubernetes
+@article{ibm-kubernetes,
+  title = {What is Kubernetes?},
+  author = {Stephanie Susnjara and Ian Smalley},
+  note = {\url{https://www.ibm.com/topics/kubernetes}, Accessed: 4.11.2024}
+}
+
+% IBM page on containerization
+@article{ibm-containerization,
+  title = {What is containerization?},
+  author = {Stephanie Susnjara and Ian Smalley},
+  note = {\url{https://www.ibm.com/topics/containerization}, Accessed: 4.11.2024}
+}
+
+% Rancher Desktop web page
+@article{rancher-desktop,
+  title = {Rancher Desktop by SUSE},
+  author = {SUSE Rancher Engineering group},
+  note = {\url{https://rancherdesktop.io/}, Accessed: 2.12.2024}
+}
+
+% Kubernetes in action book
+@book{kubernetes-in-action,
+  author    = {Marko Lukša},
+  title     = {Kubernetes in Action},
+  year      = {2018},
+  publisher = {Manning Publications Co.},
+  address   = {20 Baldwin Road, PO Box 761, Shelter Island, NY 11964},
+  isbn      = {9781617293726},
+}
+
 % Aquasec article on security best practices
 @article{aquasec-security-best-practices,
   title = {Kubernetes Security Basics and 10 Essential Best Practices},
@@ -111,4 +111,73 @@
 @article{aquasec-kubernetes-vulnerability-database-misconfigurations,
   title = {Aquasec Kubernetes vulnerability database - Misconfigurations},
   note = {\url{https://avd.aquasec.com/misconfig/kubernetes/}, Accessed: 7.3.2025}
+}
+
+% CIS Kubernets Benchmark 
+@manual{cis-kubernetes-benchmark,
+  title        = {CIS Kubernetes Benchmark v1.11.0 - 04-01-2025},
+  author       = {Center for Internet Security},
+  year         = {2025},
+  organization = {CIS},
+  note         = {PDF available online at \url{https://downloads.cisecurity.org/}},
+}
+
+% NSA Kubernetes Hardening Guide
+@manual{nsa-kubernetes-hardening-guide,
+  title        = {Kubernetes Hardening Guide v1.2},
+  author       = {National Security Agency and Cybersecurity and Infrastructure Security Agency},
+  year         = {2022},
+  organization = {NSA},
+  note         = {PDF available online at https://media.defense.gov/2022/Aug/29/2003066362/-1/-1/0/CTR\_KUBERNETES\_HARDENING\_GUIDANCE\_1.2\_20220829.PDF},
+}
+
+% Trivy Github page
+@article{trivy-github,
+  title = {Trivy Github page},
+  note = {\url{https://github.com/aquasecurity/trivy}, Accessed: 20.4.2025}
+}
+
+% Kube-bench Github page
+@article{kube-bench-github,
+  title = {Trivy Github page},
+  note = {\url{https://github.com/aquasecurity/kube-bench}, Accessed: 20.4.2025}
+}
+
+% Prowler Github page
+@article{prowler-github,
+  title = {Prowler Github page},
+  note = {\url{https://github.com/prowler-cloud/prowler}, Accessed: 20.4.2025}
+}
+
+% Kubescape Github page
+@article{kubescape-github,
+  title = {Kubescape Github page},
+  note = {\url{https://github.com/kubescape/kubescape}, Accessed: 20.4.2025}
+}
+
+% Regolibrary Github page
+@article{regolibrary-github,
+  title = {Regolibrary Github page},
+  note = {\url{https://github.com/kubescape/regolibrary}, Accessed: 20.4.2025}
+}
+
+% Prowler Open Source documentation
+@article{prowler-app-page,
+  title = {Prowler Open Source Documentation},
+  author = {Prowler Team},
+  note = {\url{https://docs.prowler.com/projects/prowler-open-source/en/latest/}, Accessed: 20.4.2025}
+}
+
+% Aqua vulnerability database
+@article{aqua-vulnerability-database,
+  title = {Aqua vulnerability database},
+  author = {Aqua Security},
+  note = {\url{https://avd.aquasec.com/misconfig/kubernetes}, Accessed: 20.4.2025}
+}
+
+% Kubernetes documentation on Pod Security Preemption
+@article{pod-security-preemption,
+  title = {Pod Priority and Preemption},
+  author = {The Linux Foundation},
+  note = {\url{https://kubernetes.io/docs/concepts/scheduling-eviction/pod-priority-preemption/}, Accessed: 20.4.2025}
 }
